--- a/src/templates/real-estate.html
+++ b/src/templates/real-estate.html
@@ -755,13 +755,13 @@
           </ul>
           <h3 class="font-bold text-lg mt-4">Major Features</h3>
           <ul class="list-disc list-inside">
-            {{#each house_details.features}}
+            {{#each house_details.major_features}}
             <li>{{this}}</li>
             {{/each}}
           </ul>
           <h3 class="font-bold text-lg mt-4">Known Issues</h3>
           <ul class="list-disc list-inside">
-            {{#each house_details.issues}}
+            {{#each house_details.known_issues}}
             <li>{{this}}</li>
             {{/each}}
           </ul>
